--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@
   justify-content: center;
   border: 5px solid #fee715ff;
   background-color: #101820ff;
-  margin-top: 70px;
   margin-right: 100px;
   margin-left: 160px;
   width: 1000px;
@@ -36,17 +35,24 @@
   width: 180px;
   height: 150 px;
 }
-.logos {
-  display: flex;
-  justify-content: space-around;
-  background-color: #101820ff;
-  border-bottom: 5px solid #fee715ff;
-  height: 50px;
-}
 #gear {
   font-size: 2.4rem;
   color: #fee715ff;
   font-weight: bold;
 } 
+.Clock{
+  background-color: #101820ff;
+  border-bottom: 5px solid #fee715ff;
+  color: #FCF6F5FF;
+  padding-top: "10px";
+  font-size: "30px";
+  font-weight: "300px";
+  text-align: "center";
+  width: 1000px;
+  height: 100%;
+  margin-top: 20px;
+  margin-right: 100px;
+  margin-left: 160px;
+}
 
 
